GUI: Ensure mgmt menus are topmost (z-index: 1)

--- a/hawk/public/stylesheets/base.css
+++ b/hawk/public/stylesheets/base.css
@@ -291,6 +291,7 @@ img
   background: #ccc;
   border: 1px solid #888;
   padding: 0;
+  z-index: 1;
 }
 
 .menu a
